monitoring/grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    application-monitoring: "true"
  name: grafana
spec:
  port:
    targetPort: grafana
  to:
    kind: Service
    name: grafana-service
    weight: 100
  wildcardPolicy: None
